packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_chocolate_100.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Lindt

Energy              20.45 pp  (Simple vs Lindt)
TotalFats            3.00 pp  (Simple vs Lindt)
CacaoSolids          0.00 pp  (Simple vs Lindt)
CocoaButter          3.00 pp  (Simple vs Lindt)
CocoaSolids          3.00 pp  (Simple vs Lindt)
MilkFat              0.00 pp  (Simple vs Lindt)
MilkSolids           0.00 pp  (Simple vs Lindt)
MSNF                 0.00 pp  (Simple vs Lindt)
MilkSNFS             0.00 pp  (Simple vs Lindt)
MilkProteins         0.00 pp  (Simple vs Lindt)
Lactose              0.00 pp  (Simple vs Lindt)
TotalFiber           1.13 pp  (Simple vs Lindt)
TotalSugars          0.00 pp  (Simple vs Lindt)
TotalCarbohydrates   2.07 pp  (Simple vs Lindt)
OtherSNFS            0.00 pp  (Simple vs Lindt)
TotalSNFS            3.00 pp  (Simple vs Lindt)
TotalProteins        0.70 pp  (Simple vs Lindt)
TotalSolids          0.00 pp  (Simple vs Lindt)
Water                0.00 pp  (Simple vs Lindt)
POD                  0.00 pp  (Simple vs Lindt)
PACsgr               0.00 pp  (Simple vs Lindt)
PACmlk               0.00 pp  (Simple vs Lindt)
HF                   2.70 pp  (Simple vs Lindt)
TotalPAC             0.00 pp  (Simple vs Lindt)
SaturatedFat         1.80 pp  (Simple vs Lindt)
TransFat             0.00 pp  (Simple vs Lindt)
