packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_chocolate_55.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Corvitto, Callebaut

Energy              24.88 pp  (Simple vs Corvitto)
TotalFats            3.65 pp  (Simple vs Corvitto)
CacaoSolids          0.00 pp  (Simple vs Corvitto)
CocoaButter          3.65 pp  (Simple vs Corvitto)
CocoaSolids          3.65 pp  (Simple vs Corvitto)
MilkFat              0.00 pp  (Simple vs Corvitto)
MilkSolids           0.00 pp  (Simple vs Corvitto)
MSNF                 0.00 pp  (Simple vs Corvitto)
MilkSNFS             0.00 pp  (Simple vs Corvitto)
MilkProteins         0.00 pp  (Simple vs Corvitto)
Lactose              0.00 pp  (Simple vs Corvitto)
TotalFiber           1.38 pp  (Simple vs Corvitto)
TotalSugars          0.00 pp  (Simple vs Corvitto)
TotalCarbohydrates   2.51 pp  (Simple vs Corvitto)
OtherSNFS            0.00 pp  (Simple vs Corvitto)
TotalSNFS            3.65 pp  (Simple vs Corvitto)
TotalProteins        0.86 pp  (Simple vs Corvitto)
TotalSolids          0.00 pp  (Simple vs Corvitto)
Water                0.00 pp  (Simple vs Corvitto)
POD                  0.00 pp  (Simple vs Corvitto)
PACsgr               0.00 pp  (Simple vs Corvitto)
PACmlk               0.00 pp  (Simple vs Corvitto)
HF                   3.29 pp  (Simple vs Corvitto)
TotalPAC             0.00 pp  (Simple vs Corvitto)
SaturatedFat         2.19 pp  (Simple vs Corvitto)
TransFat             0.00 pp  (Simple vs Corvitto)

Energy              29.97 pp  (Simple vs Callebaut)
TotalFats            5.25 pp  (Simple vs Callebaut)
CacaoSolids          1.00 pp  (Simple vs Callebaut)
CocoaButter          5.25 pp  (Simple vs Callebaut)
CocoaSolids          4.25 pp  (Simple vs Callebaut)
MilkFat              0.00 pp  (Simple vs Callebaut)
MilkSolids           0.00 pp  (Simple vs Callebaut)
MSNF                 0.00 pp  (Simple vs Callebaut)
MilkSNFS             0.00 pp  (Simple vs Callebaut)
MilkProteins         0.00 pp  (Simple vs Callebaut)
Lactose              0.00 pp  (Simple vs Callebaut)
TotalFiber           1.61 pp  (Simple vs Callebaut)
TotalSugars          2.00 pp  (Simple vs Callebaut)
TotalCarbohydrates   4.93 pp  (Simple vs Callebaut)
OtherSNFS            1.00 pp  (Simple vs Callebaut)
TotalSNFS            3.25 pp  (Simple vs Callebaut)
TotalProteins        1.00 pp  (Simple vs Callebaut)
TotalSolids          0.00 pp  (Simple vs Callebaut)
Water                0.00 pp  (Simple vs Callebaut)
POD                  2.00 pp  (Simple vs Callebaut)
PACsgr               2.00 pp  (Simple vs Callebaut)
PACmlk               0.00 pp  (Simple vs Callebaut)
HF                   2.92 pp  (Simple vs Callebaut)
TotalPAC             2.00 pp  (Simple vs Callebaut)
SaturatedFat         3.15 pp  (Simple vs Callebaut)
TransFat             0.00 pp  (Simple vs Callebaut)

Energy               5.09 pp  (Corvitto vs Callebaut)
TotalFats            1.60 pp  (Corvitto vs Callebaut)
CacaoSolids          1.00 pp  (Corvitto vs Callebaut)
CocoaButter          1.60 pp  (Corvitto vs Callebaut)
CocoaSolids          0.60 pp  (Corvitto vs Callebaut)
MilkFat              0.00 pp  (Corvitto vs Callebaut)
MilkSolids           0.00 pp  (Corvitto vs Callebaut)
MSNF                 0.00 pp  (Corvitto vs Callebaut)
MilkSNFS             0.00 pp  (Corvitto vs Callebaut)
MilkProteins         0.00 pp  (Corvitto vs Callebaut)
Lactose              0.00 pp  (Corvitto vs Callebaut)
TotalFiber           0.23 pp  (Corvitto vs Callebaut)
TotalSugars          2.00 pp  (Corvitto vs Callebaut)
TotalCarbohydrates   2.41 pp  (Corvitto vs Callebaut)
OtherSNFS            1.00 pp  (Corvitto vs Callebaut)
TotalSNFS            0.40 pp  (Corvitto vs Callebaut)
TotalProteins        0.14 pp  (Corvitto vs Callebaut)
TotalSolids          0.00 pp  (Corvitto vs Callebaut)
Water                0.00 pp  (Corvitto vs Callebaut)
POD                  2.00 pp  (Corvitto vs Callebaut)
PACsgr               2.00 pp  (Corvitto vs Callebaut)
PACmlk               0.00 pp  (Corvitto vs Callebaut)
HF                   0.36 pp  (Corvitto vs Callebaut)
TotalPAC             2.00 pp  (Corvitto vs Callebaut)
SaturatedFat         0.96 pp  (Corvitto vs Callebaut)
TransFat             0.00 pp  (Corvitto vs Callebaut)
