packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_chocolate_65.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Corvitto, USDA

Energy              20.11 pp  (Simple vs Corvitto)
TotalFats            2.95 pp  (Simple vs Corvitto)
CacaoSolids          0.00 pp  (Simple vs Corvitto)
CocoaButter          2.95 pp  (Simple vs Corvitto)
CocoaSolids          2.95 pp  (Simple vs Corvitto)
MilkFat              0.00 pp  (Simple vs Corvitto)
MilkSolids           0.00 pp  (Simple vs Corvitto)
MSNF                 0.00 pp  (Simple vs Corvitto)
MilkSNFS             0.00 pp  (Simple vs Corvitto)
MilkProteins         0.00 pp  (Simple vs Corvitto)
Lactose              0.00 pp  (Simple vs Corvitto)
TotalFiber           1.12 pp  (Simple vs Corvitto)
TotalSugars          0.00 pp  (Simple vs Corvitto)
TotalCarbohydrates   2.03 pp  (Simple vs Corvitto)
OtherSNFS            0.00 pp  (Simple vs Corvitto)
TotalSNFS            2.95 pp  (Simple vs Corvitto)
TotalProteins        0.69 pp  (Simple vs Corvitto)
TotalSolids          0.00 pp  (Simple vs Corvitto)
Water                0.00 pp  (Simple vs Corvitto)
POD                  0.00 pp  (Simple vs Corvitto)
PACsgr               0.00 pp  (Simple vs Corvitto)
PACmlk               0.00 pp  (Simple vs Corvitto)
HF                   2.65 pp  (Simple vs Corvitto)
TotalPAC             0.00 pp  (Simple vs Corvitto)
SaturatedFat         1.77 pp  (Simple vs Corvitto)
TransFat             0.00 pp  (Simple vs Corvitto)

Energy              11.61 pp  (Simple vs USDA)
TotalFats            1.25 pp  (Simple vs USDA)
CacaoSolids          1.70 pp  (Simple vs USDA)
CocoaButter          1.25 pp  (Simple vs USDA)
CocoaSolids          2.95 pp  (Simple vs USDA)
MilkFat              0.00 pp  (Simple vs USDA)
MilkSolids           0.00 pp  (Simple vs USDA)
MSNF                 0.00 pp  (Simple vs USDA)
MilkSNFS             0.00 pp  (Simple vs USDA)
MilkProteins         0.00 pp  (Simple vs USDA)
Lactose              0.00 pp  (Simple vs USDA)
TotalFiber           1.12 pp  (Simple vs USDA)
TotalSugars          1.70 pp  (Simple vs USDA)
TotalCarbohydrates   0.33 pp  (Simple vs USDA)
OtherSNFS            0.00 pp  (Simple vs USDA)
TotalSNFS            2.95 pp  (Simple vs USDA)
TotalProteins        0.69 pp  (Simple vs USDA)
TotalSolids          0.00 pp  (Simple vs USDA)
Water                0.00 pp  (Simple vs USDA)
POD                  1.70 pp  (Simple vs USDA)
PACsgr               1.70 pp  (Simple vs USDA)
PACmlk               0.00 pp  (Simple vs USDA)
HF                   4.19 pp  (Simple vs USDA)
TotalPAC             1.70 pp  (Simple vs USDA)
SaturatedFat         0.75 pp  (Simple vs USDA)
TransFat             0.00 pp  (Simple vs USDA)

Energy               8.50 pp  (Corvitto vs USDA)
TotalFats            1.70 pp  (Corvitto vs USDA)
CacaoSolids          1.70 pp  (Corvitto vs USDA)
CocoaButter          1.70 pp  (Corvitto vs USDA)
CocoaSolids          0.00 pp  (Corvitto vs USDA)
MilkFat              0.00 pp  (Corvitto vs USDA)
MilkSolids           0.00 pp  (Corvitto vs USDA)
MSNF                 0.00 pp  (Corvitto vs USDA)
MilkSNFS             0.00 pp  (Corvitto vs USDA)
MilkProteins         0.00 pp  (Corvitto vs USDA)
Lactose              0.00 pp  (Corvitto vs USDA)
TotalFiber           0.00 pp  (Corvitto vs USDA)
TotalSugars          1.70 pp  (Corvitto vs USDA)
TotalCarbohydrates   1.70 pp  (Corvitto vs USDA)
OtherSNFS            0.00 pp  (Corvitto vs USDA)
TotalSNFS            0.00 pp  (Corvitto vs USDA)
TotalProteins        0.00 pp  (Corvitto vs USDA)
TotalSolids          0.00 pp  (Corvitto vs USDA)
Water                0.00 pp  (Corvitto vs USDA)
POD                  1.70 pp  (Corvitto vs USDA)
PACsgr               1.70 pp  (Corvitto vs USDA)
PACmlk               0.00 pp  (Corvitto vs USDA)
HF                   1.53 pp  (Corvitto vs USDA)
TotalPAC             1.70 pp  (Corvitto vs USDA)
SaturatedFat         1.02 pp  (Corvitto vs USDA)
TransFat             0.00 pp  (Corvitto vs USDA)
