packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_chocolate_75.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, USDA

Energy               2.84 pp  (Simple vs USDA)
TotalFats            0.15 pp  (Simple vs USDA)
CacaoSolids          1.00 pp  (Simple vs USDA)
CocoaButter          0.15 pp  (Simple vs USDA)
CocoaSolids          1.15 pp  (Simple vs USDA)
MilkFat              0.00 pp  (Simple vs USDA)
MilkSolids           0.00 pp  (Simple vs USDA)
MSNF                 0.00 pp  (Simple vs USDA)
MilkSNFS             0.00 pp  (Simple vs USDA)
MilkProteins         0.00 pp  (Simple vs USDA)
Lactose              0.00 pp  (Simple vs USDA)
TotalFiber           0.43 pp  (Simple vs USDA)
TotalSugars          1.00 pp  (Simple vs USDA)
TotalCarbohydrates   0.21 pp  (Simple vs USDA)
OtherSNFS            0.00 pp  (Simple vs USDA)
TotalSNFS            1.15 pp  (Simple vs USDA)
TotalProteins        0.27 pp  (Simple vs USDA)
TotalSolids          0.00 pp  (Simple vs USDA)
Water                0.00 pp  (Simple vs USDA)
POD                  1.00 pp  (Simple vs USDA)
PACsgr               1.00 pp  (Simple vs USDA)
PACmlk               0.00 pp  (Simple vs USDA)
HF                   1.93 pp  (Simple vs USDA)
TotalPAC             1.00 pp  (Simple vs USDA)
SaturatedFat         0.09 pp  (Simple vs USDA)
TransFat             0.00 pp  (Simple vs USDA)
