packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_chocolate_95.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Lindt

Energy              14.83 pp  (Simple vs Lindt)
TotalFats            3.35 pp  (Simple vs Lindt)
CacaoSolids          0.00 pp  (Simple vs Lindt)
CocoaButter          3.35 pp  (Simple vs Lindt)
CocoaSolids          3.35 pp  (Simple vs Lindt)
MilkFat              0.00 pp  (Simple vs Lindt)
MilkSolids           0.00 pp  (Simple vs Lindt)
MSNF                 0.00 pp  (Simple vs Lindt)
MilkSNFS             0.00 pp  (Simple vs Lindt)
MilkProteins         0.00 pp  (Simple vs Lindt)
Lactose              0.00 pp  (Simple vs Lindt)
TotalFiber           1.27 pp  (Simple vs Lindt)
TotalSugars          2.00 pp  (Simple vs Lindt)
TotalCarbohydrates   4.31 pp  (Simple vs Lindt)
OtherSNFS            2.00 pp  (Simple vs Lindt)
TotalSNFS            1.35 pp  (Simple vs Lindt)
TotalProteins        0.79 pp  (Simple vs Lindt)
TotalSolids          0.00 pp  (Simple vs Lindt)
Water                0.00 pp  (Simple vs Lindt)
POD                  2.00 pp  (Simple vs Lindt)
PACsgr               2.00 pp  (Simple vs Lindt)
PACmlk               0.00 pp  (Simple vs Lindt)
HF                   3.02 pp  (Simple vs Lindt)
TotalPAC             2.00 pp  (Simple vs Lindt)
SaturatedFat         2.01 pp  (Simple vs Lindt)
TransFat             0.00 pp  (Simple vs Lindt)
