packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_cocoa_powder_10_12_fat.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Corvitto, Callebaut

Energy               2.32 pp  (Simple vs Corvitto)
TotalFats            0.34 pp  (Simple vs Corvitto)
CacaoSolids          0.00 pp  (Simple vs Corvitto)
CocoaButter          0.34 pp  (Simple vs Corvitto)
CocoaSolids          0.34 pp  (Simple vs Corvitto)
MilkFat              0.00 pp  (Simple vs Corvitto)
MilkSolids           0.00 pp  (Simple vs Corvitto)
MSNF                 0.00 pp  (Simple vs Corvitto)
MilkSNFS             0.00 pp  (Simple vs Corvitto)
MilkProteins         0.00 pp  (Simple vs Corvitto)
Lactose              0.00 pp  (Simple vs Corvitto)
TotalFiber           0.13 pp  (Simple vs Corvitto)
TotalSugars          0.00 pp  (Simple vs Corvitto)
TotalCarbohydrates   0.23 pp  (Simple vs Corvitto)
OtherSNFS            0.00 pp  (Simple vs Corvitto)
TotalSNFS            0.34 pp  (Simple vs Corvitto)
TotalProteins        0.08 pp  (Simple vs Corvitto)
TotalSolids          3.00 pp  (Simple vs Corvitto)
Water                3.00 pp  (Simple vs Corvitto)
POD                  0.00 pp  (Simple vs Corvitto)
PACsgr               0.00 pp  (Simple vs Corvitto)
PACmlk               0.00 pp  (Simple vs Corvitto)
HF                   0.31 pp  (Simple vs Corvitto)
TotalPAC             0.00 pp  (Simple vs Corvitto)
SaturatedFat         0.20 pp  (Simple vs Corvitto)
TransFat             0.00 pp  (Simple vs Corvitto)

Energy               0.40 pp  (Simple vs Callebaut)
TotalFats            0.06 pp  (Simple vs Callebaut)
CacaoSolids          0.00 pp  (Simple vs Callebaut)
CocoaButter          0.06 pp  (Simple vs Callebaut)
CocoaSolids          0.06 pp  (Simple vs Callebaut)
MilkFat              0.00 pp  (Simple vs Callebaut)
MilkSolids           0.00 pp  (Simple vs Callebaut)
MSNF                 0.00 pp  (Simple vs Callebaut)
MilkSNFS             0.00 pp  (Simple vs Callebaut)
MilkProteins         0.00 pp  (Simple vs Callebaut)
Lactose              0.00 pp  (Simple vs Callebaut)
TotalFiber           0.02 pp  (Simple vs Callebaut)
TotalSugars          0.00 pp  (Simple vs Callebaut)
TotalCarbohydrates   0.04 pp  (Simple vs Callebaut)
OtherSNFS            0.00 pp  (Simple vs Callebaut)
TotalSNFS            0.06 pp  (Simple vs Callebaut)
TotalProteins        0.01 pp  (Simple vs Callebaut)
TotalSolids          0.50 pp  (Simple vs Callebaut)
Water                0.50 pp  (Simple vs Callebaut)
POD                  0.00 pp  (Simple vs Callebaut)
PACsgr               0.00 pp  (Simple vs Callebaut)
PACmlk               0.00 pp  (Simple vs Callebaut)
HF                   0.05 pp  (Simple vs Callebaut)
TotalPAC             0.00 pp  (Simple vs Callebaut)
SaturatedFat         0.04 pp  (Simple vs Callebaut)
TransFat             0.00 pp  (Simple vs Callebaut)

Energy               2.72 pp  (Corvitto vs Callebaut)
TotalFats            0.40 pp  (Corvitto vs Callebaut)
CacaoSolids          0.00 pp  (Corvitto vs Callebaut)
CocoaButter          0.40 pp  (Corvitto vs Callebaut)
CocoaSolids          0.40 pp  (Corvitto vs Callebaut)
MilkFat              0.00 pp  (Corvitto vs Callebaut)
MilkSolids           0.00 pp  (Corvitto vs Callebaut)
MSNF                 0.00 pp  (Corvitto vs Callebaut)
MilkSNFS             0.00 pp  (Corvitto vs Callebaut)
MilkProteins         0.00 pp  (Corvitto vs Callebaut)
Lactose              0.00 pp  (Corvitto vs Callebaut)
TotalFiber           0.15 pp  (Corvitto vs Callebaut)
TotalSugars          0.00 pp  (Corvitto vs Callebaut)
TotalCarbohydrates   0.27 pp  (Corvitto vs Callebaut)
OtherSNFS            0.00 pp  (Corvitto vs Callebaut)
TotalSNFS            0.40 pp  (Corvitto vs Callebaut)
TotalProteins        0.09 pp  (Corvitto vs Callebaut)
TotalSolids          3.50 pp  (Corvitto vs Callebaut)
Water                3.50 pp  (Corvitto vs Callebaut)
POD                  0.00 pp  (Corvitto vs Callebaut)
PACsgr               0.00 pp  (Corvitto vs Callebaut)
PACmlk               0.00 pp  (Corvitto vs Callebaut)
HF                   0.36 pp  (Corvitto vs Callebaut)
TotalPAC             0.00 pp  (Corvitto vs Callebaut)
SaturatedFat         0.24 pp  (Corvitto vs Callebaut)
TransFat             0.00 pp  (Corvitto vs Callebaut)
