packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_cocoa_powder_17_fat.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Ghirardelli

Energy               2.32 pp  (Simple vs Ghirardelli)
TotalFats            0.34 pp  (Simple vs Ghirardelli)
CacaoSolids          0.00 pp  (Simple vs Ghirardelli)
CocoaButter          0.34 pp  (Simple vs Ghirardelli)
CocoaSolids          0.34 pp  (Simple vs Ghirardelli)
MilkFat              0.00 pp  (Simple vs Ghirardelli)
MilkSolids           0.00 pp  (Simple vs Ghirardelli)
MSNF                 0.00 pp  (Simple vs Ghirardelli)
MilkSNFS             0.00 pp  (Simple vs Ghirardelli)
MilkProteins         0.00 pp  (Simple vs Ghirardelli)
Lactose              0.00 pp  (Simple vs Ghirardelli)
TotalFiber           0.13 pp  (Simple vs Ghirardelli)
TotalSugars          0.00 pp  (Simple vs Ghirardelli)
TotalCarbohydrates   0.23 pp  (Simple vs Ghirardelli)
OtherSNFS            0.00 pp  (Simple vs Ghirardelli)
TotalSNFS            0.34 pp  (Simple vs Ghirardelli)
TotalProteins        0.08 pp  (Simple vs Ghirardelli)
TotalSolids          0.00 pp  (Simple vs Ghirardelli)
Water                0.00 pp  (Simple vs Ghirardelli)
POD                  0.00 pp  (Simple vs Ghirardelli)
PACsgr               0.00 pp  (Simple vs Ghirardelli)
PACmlk               0.00 pp  (Simple vs Ghirardelli)
HF                   0.31 pp  (Simple vs Ghirardelli)
TotalPAC             0.00 pp  (Simple vs Ghirardelli)
SaturatedFat         0.20 pp  (Simple vs Ghirardelli)
TransFat             0.00 pp  (Simple vs Ghirardelli)
